--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.5",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "hugeicons-react": "^0.3.0",
     "moralis": "^2.27.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
