--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
