--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@moralisweb3/common-evm-utils": "^2.27.2",
     "@tailwindcss/vite": "^4.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "axios": "^1.7.9",
     "hugeicons-react": "^0.3.0",
     "moralis": "^2.27.2",
@@ -24,11 +25,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@tanstack/eslint-plugin-query": "^5.66.0",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^4.12.23",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
