--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_BASE_URL="https://data-api.cryptocompare.com"
 VITE_METADATA_URL = "/asset/v2/metadata"
 VITE_TOP_LIST_URL = "/asset/v1/top/list"
 VITE_TOP_LIST_SEARCH = "/asset/v1/search"
+VITE_HISTORICAL_SOCIAL = "/index/cc/v1/historical/days"
