--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_TOP_LIST_URL = "/asset/v1/top/list"
 VITE_TOP_LIST_SEARCH = "/asset/v1/search"
 VITE_HISTORICAL_SOCIAL = "/index/cc/v1/historical/days"
 VITE_CHART_URL = "https://images.cryptocompare.com/sparkchart"
+VITE_SOCKET_URL = "wss://data-streamer.cryptocompare.com"
