--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
